# TenAgent

./: .gitignore  .gitmodules  README.md
.github/workflows/: build_docker_for_ai_agents.yml  claude_code_review.yml  coverage.yml  from_scratch.yml  linux_ubuntu2204.yml  win.yml
ai_agents/: .env.example  AGENTS.md  Taskfile.yml
ai_agents/agents/: .gitignore
ai_agents/agents/ten_packages/extension/mistral_tts_python/: README.md  addon.py  config.py  extension.py  manifest.json  mistral_tts.py  pyproject.toml  requirements.txt
ai_agents/agents/ten_packages/extension/mistral_tts_python/tests/: test_basic.py  test_error_msg.py  test_metrics.py  test_params.py  test_robustness.py  test_state_machine.py
ai_agents/agents/ten_packages/extension/mistral_tts_python/tests/configs/: property_basic_audio_setting1.json  property_basic_audio_setting2.json
ai_agents/esp32-client/ESP32-S3-Korvo-V3/: README.cn.md  README.md
ai_agents/esp32-client/Respeaker-xvf3800/: .gitignore  README.md  README_CN.md  README_RESPEAKER_XVF3800.md  sdkconfig.defaults
ai_agents/playground/: package.json
ai_agents/server/internal/: worker_common.go  worker_linux.go  worker_windows.go
core/include_internal/ten_rust/: ten_rust.h
core/src/ten_runtime/: BUILD.gn  manifest.json  output_libs.gni
core/src/ten_runtime/addon/: addon_autoload.c
core/src/ten_runtime/app/msg_interface/: common.c  start_graph.c
core/src/ten_runtime/binding/go/: BUILD.gn  manifest.json
core/src/ten_runtime/binding/go/interface/ten_runtime/: cmd_start_graph.go  cmd_start_graph.h
core/src/ten_runtime/binding/go/native/: BUILD.gn
core/src/ten_runtime/binding/go/native/internal/: common.c
core/src/ten_runtime/binding/go/native/msg/cmd/: start_graph_cmd.c
core/src/ten_runtime/binding/go/native/ten_env/: ten_env.c  ten_env_create_instance_done.c  ten_env_log.c  ten_env_on_configure_done.c  ten_env_on_deinit_done.c  ten_env_on_init_done.c  ten_env_on_start_done.c  ten_env_on_stop_done.c
core/src/ten_runtime/binding/go/native/test/: extension_tester.c
core/src/ten_runtime/binding/go/native/test/env_tester/: env_tester_log.c  env_tester_stop_test.c
core/src/ten_runtime/binding/go/native/value/: value.c
core/src/ten_runtime/binding/nodejs/: BUILD.gn  manifest.json
core/src/ten_runtime/binding/nodejs/interface/: addon_manager.ts  env_tester.ts  ten_addon.ts  ten_env.ts  value.ts  value_buffer.ts
core/src/ten_runtime/binding/nodejs/interface/msg/cmd/: start_graph_cmd.ts
core/src/ten_runtime/binding/nodejs/native/: BUILD.gn  win_delay_load_hook.cc
core/src/ten_runtime/binding/nodejs/native/msg/cmd/: start_graph_cmd.c
core/src/ten_runtime/binding/nodejs/native/ten_env/: ten_env_log_internal.c
core/src/ten_runtime/binding/nodejs/native/test/env_tester/: env_tester_log_internal.c
core/src/ten_runtime/binding/python/: BUILD.gn  manifest.json
core/src/ten_runtime/binding/python/interface/ten_runtime/: async_extension.py  global_thread_manager.py  libten_runtime_python.pyi
core/src/ten_runtime/binding/python/native/: BUILD.gn
core/src/ten_runtime/binding/python/native/extension/: extension.c
core/src/ten_runtime/binding/python/native/msg/cmd/: start_graph_cmd.c
core/src/ten_runtime/binding/python/native/ten_env/: ten_env_log.c
core/src/ten_runtime/binding/python/native/test/: extension_tester.c
core/src/ten_runtime/binding/python/native/test/env_tester/: env_tester_log.c
core/src/ten_runtime/binding/python/tools/: cython_compiler.py
core/src/ten_runtime/engine/: engine.c
core/src/ten_runtime/engine/internal/: extension_interface.c
core/src/ten_runtime/extension/: extension.c
core/src/ten_runtime/extension/internal/: close.c
core/src/ten_runtime/extension/ten_env/: on_xxx.c
core/src/ten_runtime/extension_context/: extension_context.c
core/src/ten_runtime/extension_thread/: extension_thread.c
core/src/ten_runtime/global/: log.c
core/src/ten_runtime/msg/: inline_assets.c  msg.c
core/src/ten_runtime/msg/cmd_base/cmd/start_graph/: cmd.c
core/src/ten_runtime/msg/cmd_base/cmd/start_graph/field/: sync_stop_before_deinit.c
core/src/ten_runtime/ten_env/: inline_assets.c  ten_env.c
core/src/ten_runtime/ten_env/internal/: log.c
core/src/ten_runtime/test/: env_tester.c  test_app.c
docs/: README-CN.md  README-ES.md  README-FR.md  README-IT.md  README-JP.md  README-KR.md
docs/ai/: L0_repo_card.md
docs/ai/L1/: 01_setup.md  02_architecture.md  03_code_map.md  04_conventions.md  05_workflows.md  06_interfaces.md  07_gotchas.md  08_security.md
docs/getting-started/: quick-start.cn.md  quick-start.md  websocket-voice-assistant-quick-start.cn.md  websocket-voice-assistant-quick-start.md
tests/ten_runtime/integration/python/sync_stop_before_deinit_python/: BUILD.gn  test_case.py
tests/ten_runtime/integration/python/sync_stop_before_deinit_python/client/: client.cc
tests/ten_runtime/integration/python/sync_stop_before_deinit_python/sync_stop_before_deinit_python_app/: manifest.json  property.json
tests/ten_runtime/integration/python/sync_stop_before_deinit_python/sync_stop_before_deinit_python_app/ten_packages/extension/test_extension_1/: addon.py  extension.py  manifest.json
tests/ten_runtime/integration/python/sync_stop_before_deinit_python/sync_stop_before_deinit_python_app/ten_packages/extension/test_extension_2/: addon.py  extension.py  manifest.json
tests/ten_runtime/integration/python/sync_stop_before_deinit_python/sync_stop_before_deinit_python_app/ten_packages/extension/test_extension_3/: addon.py  extension.py  manifest.json
tests/ten_runtime/integration/python/two_exts_graph_test_python/: BUILD.gn  test_case.py
tests/ten_runtime/integration/python/two_exts_graph_test_python/two_exts_graph_test_python_app/: manifest.json
tests/ten_runtime/integration/python/two_exts_graph_test_python/two_exts_graph_test_python_app/tests/: conftest.py  pyproject.toml  test_graph_1.py  test_graph_2.py
tests/utils/: build_config.py
tools/pylint/: .pylintrc
tools/tgn/: install_tgn.ps1
tools/tman/: install_tman.ps1  install_tman.sh  upload-to-ppa.sh
(+1430 files in other folders)
