#
# Copyright © 2025 Agora
# This file is part of TEN Framework, an open source project.
# Licensed under the Apache License, Version 2.0, with certain conditions.
# Refer to the "LICENSE" file in the root directory for more information.
#

[project]
name = "mistral-tts-python"
description = "TEN Framework TTS extension for Mistral Voxtral written in Python"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["httpx[http2]", "certifi", "pydantic>=2.0.0", "typing-extensions"]

[tool.pytest.ini_options]
testpaths = ["tests"]
