#
# Copyright © 2025 Agora
# This file is part of TEN Framework, an open source project.
# Licensed under the Apache License, Version 2.0, with certain conditions.
# Refer to the "LICENSE" file in the root directory for more information.
#
import("//build/ten_runtime/feature/test.gni")
import("//build/ten_runtime/ten.gni")

ten_package_test_prepare_app("sync_stop_before_deinit_python_app") {
  src_app = "default_app_python"
  src_app_language = "python"
  generated_app_src_root_dir_name = "sync_stop_before_deinit_python_app"

  replace_paths_after_install_app = [
    "sync_stop_before_deinit_python_app/manifest.json",
    "sync_stop_before_deinit_python_app/property.json",
    "sync_stop_before_deinit_python_app/ten_packages/extension/test_extension_1/manifest.json",
    "sync_stop_before_deinit_python_app/ten_packages/extension/test_extension_1/property.json",
    "sync_stop_before_deinit_python_app/ten_packages/extension/test_extension_1/extension.py",
    "sync_stop_before_deinit_python_app/ten_packages/extension/test_extension_1/__init__.py",
    "sync_stop_before_deinit_python_app/ten_packages/extension/test_extension_1/addon.py",
    "sync_stop_before_deinit_python_app/ten_packages/extension/test_extension_2/manifest.json",
    "sync_stop_before_deinit_python_app/ten_packages/extension/test_extension_2/property.json",
    "sync_stop_before_deinit_python_app/ten_packages/extension/test_extension_2/extension.py",
    "sync_stop_before_deinit_python_app/ten_packages/extension/test_extension_2/__init__.py",
    "sync_stop_before_deinit_python_app/ten_packages/extension/test_extension_2/addon.py",
    "sync_stop_before_deinit_python_app/ten_packages/extension/test_extension_3/manifest.json",
    "sync_stop_before_deinit_python_app/ten_packages/extension/test_extension_3/property.json",
    "sync_stop_before_deinit_python_app/ten_packages/extension/test_extension_3/extension.py",
    "sync_stop_before_deinit_python_app/ten_packages/extension/test_extension_3/__init__.py",
    "sync_stop_before_deinit_python_app/ten_packages/extension/test_extension_3/addon.py",
  ]

  if (ten_enable_ten_manager) {
    deps = [
      "//core/src/ten_manager",
      "//packages/core_apps/default_app_python:upload_default_app_python_to_server",
      "//packages/core_protocols/msgpack:upload_protocol_msgpack_to_server",
    ]
  }
}

ten_package_test_prepare_client("sync_stop_before_deinit_python_app_client") {
  sources = [ "client/client.cc" ]
  include_dirs = [
    "//core/src",
    "//core",
    "//packages",
    "//tests",
  ]
  deps = [
    "//core/src/ten_runtime",
    "//packages/core_protocols/msgpack:msgpack_files",
    "//tests/common/client:msgpack_client",
    "//third_party/msgpack:msgpackc",
    "//third_party/nlohmann_json",
  ]
}

ten_package_test_prepare_auxiliary_resources(
    "sync_stop_before_deinit_python_test_files") {
  resources = [
    "__init__.py",
    "test_case.py",
  ]

  utils_files = exec_script("//.gnfiles/build/scripts/glob_file.py",
                            [
                              "--dir",
                              rebase_path("//tests/utils/**/*"),
                              "--dir-base",
                              rebase_path("//tests/utils"),
                              "--recursive",
                              "--only-output-file",
                            ],
                            "json")

  foreach(utils_file, utils_files) {
    utils_file_rel_path = utils_file.relative_path
    resources +=
        [ "//tests/utils/${utils_file_rel_path}=>utils/${utils_file_rel_path}" ]
  }
}

group("sync_stop_before_deinit_python") {
  deps = [
    ":sync_stop_before_deinit_python_app",
    ":sync_stop_before_deinit_python_app_client",
    ":sync_stop_before_deinit_python_test_files",
    "//tests/ten_runtime/integration/python:copy_pytest_ini_for_ten_runtime_python_integration_test",
  ]
}
